docs/v4.0.0/_sources/gallery/single/nearfield.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/nearfield.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_nearfield.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_nearfield.py:


Near-Fields Computation and Visualization
=========================================

This example demonstrates the process of computing and visualizing the far-fields of a scatterer using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-41

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian
    from PyMieSim.single.representations import NearField

    source = Gaussian(
        wavelength=300 * ureg.nanometer,
        polarization=90 * ureg.degree,
        optical_power=1 * ureg.watt,
        NA=0.3 * ureg.AU,
    )

    scatterer = Sphere(
        diameter=10 * ureg.nanometer,
        source=source,
        refractive_index=(1.4 + 0.j) * ureg.RIU,
        medium_refractive_index=1. * ureg.RIU,
    )

    near_field = NearField(
        scatterer=scatterer,
    )

    near_field.plot(
        "|E|:abs",
        type="total",
        plane_origin=(0.0, 0.0, 0.0),
        plane_normal=(0.0, 1.0, 0.0),
        sampling=400,
        extent_scale=8,
    )


.. image-sg:: /gallery/single/images/sphx_glr_nearfield_001.png
   :alt: total |E| abs
   :srcset: /gallery/single/images/sphx_glr_nearfield_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Computing total near field component: |E|
    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/near_field.py:251: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.
      fields[component] = numpy.asarray(values).reshape(self.X.shape)

    <Figure size 600x600 with 2 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.310 seconds)


.. _sphx_glr_download_gallery_single_nearfield.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: nearfield.ipynb <nearfield.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: nearfield.py <nearfield.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: nearfield.zip <nearfield.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
